# GiljoAI_MCP

./: #1_Install_Instructions.txt  .claudeignore  .coveragerc  .dockerignore  .env.backup_20251010_123653  .env.backup_8000  .env.dev  .env.env.backup  .env.example  .env.old  .env.prod  .export-exclude  .giljo_install_manifest.json  .gitattributes  .gitignore  .gitignore.release  .gitleaks.toml  .mcp-serena.json  .mcp.json  .pre-commit-config.yaml  .release-ignore  .ruff.toml  .tmp_check.txt  =3.9.0  ABSOLUTE_FILE_PATHS.txt  AGENTS.md  AGENT_INFO_BUTTON_ANALYSIS_REPORT.md  AGENT_PROFILE_UPDATE_PROMPT.md  AGENT_PROMPT_FILE_RENAMING.md  AGENT_PROMPT_USER_MANAGEMENT_AND_WIZARD.md  AGENT_TEMPLATES_REORGANIZATION.md  AGENT_TYPE_QUESTIONS_ANSWERED.md  AGENT_TYPE_QUICK_REFERENCE.md  AGENT_TYPE_REFACTORING_GUIDE.md  ANALYSIS_SUMMARY.md  BACKEND_TEST_REPORT_0246a.md  BCRYPT_FIX_REPORT.md  BUGFIX_SQLALCHEMY_GENERATOREXIT.md  BUGFIX_SUMMARY.md  CHANGELOG.md  (+424 more)
--help/: .giljo_install_manifest.json  config.yaml  create_shortcut.vbs  create_start_giljo_bat_shortcut.vbs  start_giljo.bat
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.serena/: .gitignore  project.yml  project.yml.backup
.tmp_be5060/: _review_auth_diff.txt  _review_mcp_sdk_diff.txt  baseline.txt
Docs/: AGENT_INSTRUCTIONS.md  CONFIGURATION_AND_REFERENCE_INDEX.md  LINTING_STANDARDS.md  MESSAGE_QUEUE_GUIDE.md  PRODUCTION_READINESS_CERTIFICATION_FINAL.md  PRODUCT_AGENT_TEMPLATES.md  PRODUCT_PROPOSAL.md  PROJECT_CARDS.md  PROJECT_FLOW_VISUAL.md  PROJECT_ORCHESTRATION_PLAN.md  PROVEN_FEATURES_TO_PRESERVE.md  README_FIRST.md  SUB_AGENT_INTEGRATION_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  Techdebt.md  Techdebt_sept_2025.md  Website colors.txt  audit_report_5_4_3.md  backend_enhancements_phase3.md  color_themes.md  forensic_analysis_5_4_3.md  gui_parallel_installer_integration.md  gui_profile_enhancement_summary.md  installer_developer_guide.md  installer_implementation_checklist.md  installer_troubleshooting.md  installer_user_guide.md  installer_ux_redesign_plan.md  integration_report_5_4_3.md  linting_fixes_report_5_4_3.md  linting_report_5_4_3.md  phase_2_linting_enforcement_report.md  unification_test_report_5_4_3.md
Linux_Installer/: linux_install.py
api/: __init__.py  app.py  app_state.py  auth_utils.py  dependencies.py  event_bus.py  exception_handlers.py  main.py  mcp_dispatcher.py  middleware.py  run_api.py  websocket.py  websocket_event_listener.py  websocket_manager.py  websocket_service.py  ws_revocation.py
audit/: 0860a_TOOL_INSTALL_DEP_SCAN.md  0860b_SCANCODE_SOURCE_SCAN.md  0860d_FINDINGS_CONSOLIDATION.md  AUDIT_SUMMARY.md  CODE_PROVENANCE_LICENSE_AUDIT.md  DEPENDENCY_LICENSES.md  SCANCODE_FINDINGS.md  SCANOSS_FINDINGS.md
backups/: RECOVERY_orchestrator_consolidation.md  giljo_mcp_db_backup_20250918_202725.sql  giljo_mcp_pre_migration_20260128_113346.sql  giljo_mcp_pre_nuclear_20251114_200550.sql  migration_restore_0424.sql  migration_restore_0424_v2.sql  migration_restore_0424_v3.sql
certs/: .gitkeep
claude_agent_templates/: VALIDATION_REPORT.md  giljo-implementer.md  giljo-orchestrator.md  giljo-tester.md
dev_tools/: GiljoAI_Control_Panel.vbs  README.md  __init__.py  control_panel.py  control_panel_sudo.sh  create_test_apikey.py  launch_control_panel.bat  launch_control_panel.sh  linux_reset.py  requirements.txt  setup_control_panel.py  setup_devtools_venv.bat  windows_reset.py
devlog/: 2025-09-29_cli_installation_fixes.md  2025-09-29_gui_installer_improvements.md  2025-09-29_multi_ai_tool_integration.md  2025-09-29_postgresql_uninstaller.md  2025-09-30_installer-architecture-overhaul.md  2025-09-30_mcp_uninstall_integration.md  2025-09-30_quickstart_migration_QA_retest.md  2025-10-01_installer_ui_fixes.md  2025-10-01_production_startup_validation.md  devlog_postgres_guide_2025_01_30.md  devlog_postgres_window_ui_2025_01_30.md  devlog_version_fix_2025_09_30.md  testing_validation_installer_migration_2025_09_30.md
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: 0246c_QUICK_START.md  ACCESSIBILITY_ACTION_PLAN_10_13_2025.md  ACCESSIBILITY_QUICK_FIX_GUIDE.md  ACCESSIBILITY_VISUAL_SUMMARY_10_13_2025.md  AGENT_HANDOFF_PROMPT.md  AGENT_INSTRUCTIONS.md  AGENT_JOBS_API_REFERENCE.md  AGENT_TEMPLATES_GUIDE.md  AGENT_TEMPLATES_REFERENCE.md  AI_CODING_TOOLS_COMPARISON__FRAGMENTED.md  AI_TOOL_CONFIGURATION_MANAGEMENT.md  AI_TOOL_CONFIGURATION_MANAGEMENT_10_13_2025.md  AI_TOOL_INTEGRATION.md  AKE_MCP_ORCHESTRATOR_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_PATTERNS_REFERENCE_FULL.md  ARCHITECTURE_V2.md  BACKGROUND_SERVICE_ORCHESTRATION__FRAGMENTED.md  BRANDING_GUIDE.md  CHANGELOG.md  CHANGELOG__FRAGMENTED.md  CHANGES_2025-11-18_PER_USER_TENANCY.md  CODE_STANDARDS.md  CONFORMANCE.md  CONTEXT_API_GUIDE.md  CONTEXT_INTEGRATION_GUIDE.md  CONTEXT_MANAGEMENT_SYSTEM.md  CONTEXT_PERFORMANCE_REPORT.md  CRITICAL_RELEASE-NOTES.MD  CROSS_PLATFORM_COMPATIBILITY_REVIEW.md  CROSS_PLATFORM_GUIDE.md  CROSS_PLATFORM_GUIDE__FRAGMENTED.md  Connect Claude Code to tools via MCP.md  DEPENDENCIES.md  DEPENDENCIES__FRAGMENTED.md  EDITION_ISOLATION_GUIDE.md  ENHANCED_SETUP_FLOW.md  ENHANCED_SETUP_FLOW_10_13_2025.md  EXCEPTION_HANDLING.md  FIRST_LAUNCH_EXPERIENCE.md  (+116 more)
examples/: context_demo_standalone.py  context_management_demo.py  database_backup_example.py  database_network_usage.py
frontend/: .env.production  .env.test  .eslintrc.json  .prettierrc  0243f_README_FIRST.md  AGENT_FLOW_QUICK_START.md  BUTTON_RELOCATION_REVIEW.md  BUTTON_RELOCATION_SUMMARY.md  CONTEXT_PRIORITY_CONFIG_DUAL_ENDPOINT_IMPLEMENTATION.md  DESIGN_SYSTEM.md  E2E_TEST_SETUP_GUIDE.md  MANUAL_TEST_BUTTON_RELOCATION.md  MISSION_PANEL_IMPLEMENTATION_SUMMARY.md  PASSWORD_RESET_VALIDATION_REPORT.md  PENCIL_ICON_FIX.md  PROJECT_STATE_TRANSITIONS_TEST_SUMMARY.md  analyze_eslint.mjs  css-import-plugin.js  css-transformer.js  design-system-sample-v2.html  design-system-sample.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  run_frontend.js  temp_test.js  (+8 more)
(+7772 files in other folders)
