[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giljo-mcp"
version = "1.0.0"
description = "GiljoAI MCP Coding Orchestrator - Multi-agent orchestration system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GiljoAI Team", email = "team@giljoai.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "fastmcp>=0.1.0",
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "pyyaml>=6.0",
    "uvicorn>=0.23.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.4.0",
    "types-PyYAML",
    "types-passlib",
]

[project.urls]
Homepage = "https://github.com/giljoai/giljo-mcp"
Documentation = "https://giljoai.github.io/giljo-mcp"
Repository = "https://github.com/giljoai/giljo-mcp.git"
Issues = "https://github.com/giljoai/giljo-mcp/issues"

[project.scripts]
giljo-mcp = "giljo_mcp.__main__:main"
giljo-setup = "setup_gui:main"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | build
  | dist
  | node_modules
  | migrations
  | temp
  | backups
  | logs
  | data
  | \.serena
  | \.giljo-config
)/
'''
# Black formatting options
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = false

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["giljo_mcp"]

[tool.setuptools.package-data]
giljo_mcp = ["py.typed"]

[tool.coverage.run]
branch = true
source = ["giljo_mcp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "pass",
    "except ImportError:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--asyncio-mode=auto",
    "--cov=giljo_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]