[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giljo-mcp"
version = "1.0.2"
description = "GiljoAI MCP Coding Orchestrator - Multi-agent orchestration system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GiljoAI Team", email = "team@giljoai.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # Core Framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database (PostgreSQL Only - Required)
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",

    # Authentication & Security
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "python-multipart>=0.0.6",
    "PyJWT>=2.8.0",

    # MCP SDK (Model Context Protocol)
    "mcp==1.12.3",

    # Core Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "aiofiles>=24.1.0",
    "tiktoken>=0.5.0",
    "structlog>=25.0.0",
    "watchdog>=3.0.0",

    # Vision Document Summarization
    "sumy>=0.11.0",
    "nltk>=3.8",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pre-commit>=3.4.0",
    "types-PyYAML",
    "types-passlib",
    "fastmcp>=0.1.0",  # MCP server framework (test-only dependency)
]

# Windows-specific dependencies - removed in Handover 0394
# pywin32 was unused (no imports found in codebase)

[project.urls]
Homepage = "https://github.com/giljoai/giljo-mcp"
Documentation = "https://giljoai.github.io/giljo-mcp"
Repository = "https://github.com/giljoai/giljo-mcp.git"
Issues = "https://github.com/giljoai/giljo-mcp/issues"

[project.scripts]
giljo-setup = "setup_gui:main"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | build
  | dist
  | node_modules
  | migrations
  | temp
  | backups
  | logs
  | data
  | \.serena
  | \.giljo-config
)/
'''
# Black formatting options
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = false

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["giljo_mcp"]

[tool.setuptools.package-data]
giljo_mcp = ["py.typed"]

[tool.coverage.run]
branch = true
source = ["giljo_mcp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    # Smoke tests are integration workflow validators (not coverage targets)
    "tests/smoke/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "pass",
    "except ImportError:",
    "if TYPE_CHECKING:",
    # Smoke tests are integration workflow validators (not coverage targets)
    "pragma: smoke test",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_decorators = false
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
error_summary = true
follow_imports = "normal"
ignore_missing_imports = false
warn_no_return = true
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
incremental = true
cache_dir = ".mypy_cache"

# Exclude installer files - transient code that users run once
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^venv/",
    "^node_modules/",
    "^migrations/",
    "^temp/",
    "^backups/",
    "^logs/",
    "^data/",
    "^\\.serena/",
    "^\\.giljo-config/",
    "^tests/fixtures/",
    "^installer/",
    "^installers/",
    "bootstrap\\.py$",
    "setup\\.py$",
    "setup_gui\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "uvicorn.*",
    "passlib.*",
    "jose.*",
    "alembic.*",
    "asyncpg.*",
    "websockets.*",
    "rich.*",
    "typer.*",
    "pytest.*",
    "pytest_asyncio.*",
    "setuptools.*",
    "redis.*",
    "bootstrap",
    "setup",
    "setup_gui",
    "installer.*",
    "installers.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--asyncio-mode=auto",
    "--cov=giljo_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--ignore=tests/test_websocket_security.py",
    "--timeout=30",
    "--timeout-method=thread",
]
timeout_func_only = true
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "stress: marks tests as stress/performance tests",
    "network: marks tests requiring network connectivity",
    "server_mode: marks tests requiring server mode",
    "security: marks tests as security-related tests",
    "deprecated: marks tests for deprecated functionality (Handover 0116)",
    "smoke: Smoke tests (integration workflows validating critical paths, exempt from coverage thresholds)",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "node_modules", "installer", "installers"]
skips = [
    "B101",  # assert_used - allowed in tests
    "B104",  # hardcoded_bind_all_interfaces - intentional per v3.0 architecture
    "B601",  # paramiko_calls - handled separately if SSH used
]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test*.py"]
