[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giljo-mcp"
version = "2.0.1.1"
description = "GiljoAI MCP Coding Orchestrator - Multi-agent orchestration system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Elastic License 2.0"}
authors = [
    {name = "GiljoAI Team", email = "infoteam@giljo.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # NOTE: requirements.txt (INF-8000f) is the single source of truth for
    # runtime deps. This list MUST mirror it exactly (same names/extras/
    # specifiers); tests/unit/test_dependency_manifest_sync.py REDs CI on any
    # drift.

    # Core Framework
    # PINNED (INF-6053; deferral now lifted): fastapi 0.137 reworked include_router — app.routes no longer
    # flattens sub-routes; it appends fastapi.routing._IncludedRouter wrappers resolved lazily via
    # effective_candidates(). INF-6053 deferred by pinning last-known-good; this change completes the bump
    # (route-introspection tests flatten _IncludedRouter via tests/helpers/route_surface). starlette 1.3.1
    # clears 4 CVEs (CVE-2026-48818/48817/54283/54282) that 1.0.1 carried. Keep these two in lockstep.
    "fastapi==0.139.0",
    "starlette==1.3.1",  # Pinned with fastapi (clears CVE-2026-48818/48817/54283/54282; needs >=1.3.1)
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",

    # Database (PostgreSQL Only - Required)
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.5.1",  # Required by SQLAlchemy async on macOS arm64 (transitive dep not auto-installed)

    # Authentication & Security
    "bcrypt>=4.0.0",
    "cryptography>=48.0.0",  # Fernet encryption for auth tokens (auth_manager.py)
    "python-multipart>=0.0.6",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",  # Required by Pydantic EmailStr (auth.py, users.py)

    # MCP SDK (Model Context Protocol)
    # Upper bound: minor bumps require re-running
    # tests/integration/test_mcp_wire_contract_dict_serialization.py (wire contract).
    # Patch bumps allowed. CVE-2025-66416 DNS rebinding fix required >=1.27.1.
    "mcp>=1.27.1,<1.29",

    # Core Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "httpx>=0.25.0",
    "packaging>=23.0",  # Version parsing for the CE update checker (api/startup/update_checker.py)
    "psutil>=5.9.0",
    "tiktoken>=0.5.0",
    "structlog>=25.0.0",
    "watchdog>=3.0.0",

    # SaaS Dependencies (only used when GILJO_MODE=saas or demo).
    # CE installer paths never touch these; SaaS-gated by GILJO_MODE.
    "resend>=2.30.1",  # Transactional email via Resend API
    "aiosmtplib>=5.1.1",  # Async SMTP client for SmtpProvider (Mailpit/local capture)
    "jinja2>=3.1.6",  # Templating for Ops Panel HTML views (ops_panel/main.py)
    "sentry-sdk[fastapi]>=2.60.0",  # Backend error tracking for SaaS/Demo (INF-5063)

    # SaaS Edition: per-tenant rate limiting backed by Redis.
    # CE installer paths never touch Redis; guarded by GILJO_MODE=saas in both
    # the runtime store (saas/rate_limiting/store.py) and the installer.
    "redis>=5.0",

    # SaaS Edition: durable per-tenant backup object storage (S3-compatible
    # Railway bucket). Imported LAZILY inside saas/backup/backends.py so CE
    # self-hosters without boto3 never fail importing the module (INF-6139).
    "boto3>=1.35.0",

    # SaaS Edition: OAuth 2.0/OIDC client for social-login provider adapters
    # (BE-1001/1002/1003). CE never imports saas/auth/social/.
    "authlib>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",  # parallel test workers (-n); CI unit step runs -n 6 with per-worker DBs
    "fakeredis>=2.20.0",
    "pre-commit>=3.4.0",
    "types-PyYAML",
]

# Windows-specific dependencies - removed in Handover 0394
# pywin32 was unused (no imports found in codebase)

[project.urls]
Homepage = "https://github.com/giljoai/giljo-mcp"
Documentation = "https://giljoai.github.io/giljo-mcp"
Repository = "https://github.com/giljoai/giljo-mcp.git"
Issues = "https://github.com/giljoai/giljo-mcp/issues"

# Entry points intentionally omitted — CE installs via install.py, not pip install

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | build
  | dist
  | node_modules
  | migrations
  | temp
  | backups
  | logs
  | data
  | \.serena
  | \.giljo-config
)/
'''
# Black formatting options
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
giljo_mcp = ["py.typed"]

[tool.coverage.run]
branch = true
source = ["giljo_mcp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    # Smoke tests are integration workflow validators (not coverage targets)
    "tests/smoke/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "pass",
    "except ImportError:",
    "if TYPE_CHECKING:",
    # Smoke tests are integration workflow validators (not coverage targets)
    "pragma: smoke test",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_decorators = false
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
error_summary = true
follow_imports = "normal"
ignore_missing_imports = false
warn_no_return = true
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
incremental = true
cache_dir = ".mypy_cache"

# Exclude installer files - transient code that users run once
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^venv/",
    "^node_modules/",
    "^migrations/",
    "^temp/",
    "^backups/",
    "^logs/",
    "^data/",
    "^\\.serena/",
    "^\\.giljo-config/",
    "^tests/fixtures/",
    "^installer/",
    "^installers/",
    "bootstrap\\.py$",
    "setup\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "jose.*",
    "alembic.*",
    "asyncpg.*",
    "websockets.*",
    "rich.*",
    "typer.*",
    "pytest.*",
    "pytest_asyncio.*",
    "setuptools.*",
    "redis.*",
    "bootstrap",
    "setup",
    "installer.*",
    "installers.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--asyncio-mode=auto",
    "--cov=giljo_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--ignore=tests/test_websocket_security.py",
    "--timeout=30",
    "--timeout-method=thread",
]
timeout_func_only = true
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "stress: marks tests as stress/performance tests",
    "network: marks tests requiring network connectivity",
    "server_mode: marks tests requiring server mode",
    "security: marks tests as security-related tests",
    "deprecated: marks tests for deprecated functionality (Handover 0116)",
    "smoke: Smoke tests (integration workflows validating critical paths, exempt from coverage thresholds)",
    "blocking: blocking tests — failure breaks CI (Tier-1, every push)",
    "informational: informational tests — failure logged but does not break CI (Tier-2, tag-only)",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "node_modules", "installer", "installers"]
skips = [
    "B101",  # assert_used - allowed in tests
    "B104",  # hardcoded_bind_all_interfaces - intentional per v3.0 architecture
    "B601",  # paramiko_calls - handled separately if SSH used
    "B608",  # hardcoded_sql_expressions - only hit is agent protocol prompt f-string (false positive)
]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test*.py"]
